update makefile for calling python script

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
 pixeldata-ball.vhd: pixeldata-ball-top.vhd bitmap-ball.vhd pixeldata-ball-bottom.vhd
 	cat $^ > $@
 
-bitmap-ball.vhd: bitmap-ball.py
-	python3 $< > $@
+bitmap-ball.vhd: ball.png
+	python3 bitmap-ball.py $< > $@
 
